--- a/deploy/dockerfile/Dockerfile_java23
+++ b/deploy/dockerfile/Dockerfile_java23
@@ -34,7 +34,8 @@ RUN code-server --install-extension eamodio.gitlens
 RUN code-server --install-extension ms-ceintl.vscode-language-pack-zh-hans
 # RUN code-server --install-extension shalldie.background
 
-RUN code-server --install-extension Katsute.code-background
+RUN #code-server --install-extension Katsute.code-background
+RUN code-server --install-extension shalldie.background
 
 # RUN wget -q https://open-vsx.org/api/shalldie/background/1.1.23/file/shalldie.background-1.1.23.vsix
 RUN pwd && tree
