--- a/deploy/jenkins-agent/Dockerfile_java23
+++ b/deploy/jenkins-agent/Dockerfile_java23
@@ -41,12 +41,28 @@ RUN curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.s
     && sh install-scout.sh
 
 # 下载并解压 Maven
+ENV MAVEN_VERSION 3.1.0
+ENV MAVEN_HOME /usr/local/maven-${MAVEN_VERSION}
+RUN curl -fsSL https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/${MAVEN_VERSION}/apache-maven-${MAVEN_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
+    && mv /usr/local/apache-maven-${MAVEN_VERSION} $MAVEN_HOME \
+    && ln -s $MAVEN_HOME/bin/mvn /usr/bin/mvn310
+RUN mvn310 -v
+
+# 下载并解压 Maven
 ENV MAVEN_VERSION 3.6.3
-ENV MAVEN_HOME /usr/local/maven
+ENV MAVEN_HOME /usr/local/maven-${MAVEN_VERSION}
 RUN curl -fsSL https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/${MAVEN_VERSION}/apache-maven-${MAVEN_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
     && mv /usr/local/apache-maven-${MAVEN_VERSION} $MAVEN_HOME \
     && ln -s $MAVEN_HOME/bin/mvn /usr/bin/mvn
 RUN mvn -v
+
+# 下载并解压 Maven
+ENV MAVEN_VERSION 3.9.9
+ENV MAVEN_HOME /usr/local/maven-${MAVEN_VERSION}
+RUN curl -fsSL https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/${MAVEN_VERSION}/apache-maven-${MAVEN_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
+    && mv /usr/local/apache-maven-${MAVEN_VERSION} $MAVEN_HOME \
+    && ln -s $MAVEN_HOME/bin/mvn /usr/bin/mvn399
+RUN mvn399 -v
 
 # 下载并解压 Gradle
 ENV GRADLE_VERSION 8.5
@@ -57,6 +73,22 @@ RUN curl -fsSL https://services.gradle.org/distributions/gradle-${GRADLE_VERSION
     && ln -s $GRADLE_HOME/bin/gradle /usr/bin/gradle \
     && rm gradle-bin.zip
 RUN gradle --version
+
+# 下载并解压 Ant
+ENV ANT_VERSION 1.8.0
+ENV ANT_HOME /usr/local/ant-${ANT_VERSION}
+RUN curl -fsSL https://archive.apache.org/dist/ant/binaries/apache-ant-${ANT_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
+    && mv /usr/local/apache-ant-${ANT_VERSION} $ANT_HOME \
+    && ln -s $ANT_HOME/bin/ant /usr/bin/ant18
+RUN ant18 -version
+
+# 下载并解压 Ant
+ENV ANT_VERSION 1.9.0
+ENV ANT_HOME /usr/local/ant-${ANT_VERSION}
+RUN curl -fsSL https://archive.apache.org/dist/ant/binaries/apache-ant-${ANT_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
+    && mv /usr/local/apache-ant-${ANT_VERSION} $ANT_HOME \
+    && ln -s $ANT_HOME/bin/ant /usr/bin/ant19
+RUN ant19 -version
 
 # 下载并解压 Ant
 ENV ANT_VERSION 1.10.13
