--- a/deploy/jenkins-agent/Dockerfile_java7
+++ b/deploy/jenkins-agent/Dockerfile_java7
@@ -1,12 +1,15 @@
 FROM debian:stable
 USER root
-# 更新包列表
+# 备份并修改源列表以包含旧的 Debian 仓库
+RUN mv /etc/apt/sources.list /etc/apt/sources.list.bak
+RUN echo "deb http://archive.debian.org/debian wheezy main contrib non-free" > /etc/apt/sources.list
+RUN echo "Acquire::Check-Valid-Until false;" > /etc/apt/apt.conf.d/10no--check-valid-until
+
+# 更新软件包列表
 RUN apt-get update
-# 安装 OpenJDK 6
-RUN apt-get install -y openjdk-7-jdk
-# 设置环境变量
-ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64
-ENV PATH $JAVA_HOME/bin:$PATH
+
+# 安装 OpenJDK 7 JRE
+RUN apt-get install -y openjdk-7-jre
 
 # 验证 Java 安装
 RUN java -version
@@ -110,7 +113,8 @@ RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/s
 # 查看 kubectl 和 Helm 版本
 RUN kubectl version --client
 RUN helm version
-
+# 清理 apt 缓存以减小镜像体积
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # 恢复默认环境变量
 ENV DEBIAN_FRONTEND=dialog
     
