--- a/deploy/jenkins-agent/Dockerfile_java6
+++ b/deploy/jenkins-agent/Dockerfile_java6
@@ -8,7 +8,11 @@ RUN if [ -f /etc/apt/sources.list ]; then \
     fi
 RUN echo "deb http://archive.debian.org/debian wheezy main contrib non-free" > /etc/apt/sources.list
 RUN echo "Acquire::Check-Valid-Until false;" > /etc/apt/apt.conf.d/10no--check-valid-until
-
+# 导入缺失的 GPG 密钥
+RUN apt-get update && apt-get install -y gnupg2 \
+    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 8B48AD6246925553 \
+    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 7638D0442B90D010 \
+    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6FB2A1C265FFB764
 # 更新软件包列表
 RUN apt-get update
 
