--- a/deploy/jenkins-agent/Dockerfile_java7
+++ b/deploy/jenkins-agent/Dockerfile_java7
@@ -1,24 +1,37 @@
-FROM debian:stable
-USER root
-# 备份并修改源列表以包含旧的 Debian 仓库
-# 检查并备份源列表，如果存在则备份，不存在则创建空的备份文件
-RUN if [ -f /etc/apt/sources.list ]; then \
-        mv /etc/apt/sources.list /etc/apt/sources.list.bak; \
-    else \
-        touch /etc/apt/sources.list.bak; \
-    fi
-RUN echo "deb http://archive.debian.org/debian wheezy main contrib non-free" > /etc/apt/sources.list
-RUN echo "Acquire::Check-Valid-Until false;" > /etc/apt/apt.conf.d/10no--check-valid-until
-# 导入缺失的 GPG 密钥
-RUN apt-get update && apt-get install -y gnupg2 \
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 8B48AD6246925553 \
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 7638D0442B90D010 \
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6FB2A1C265FFB764
-# 更新软件包列表
+# 使用 ubuntu:14.04 作为基础镜像
+FROM ubuntu:14.04
+
+# 设置环境变量，避免交互提示
+ENV DEBIAN_FRONTEND=noninteractive
+
+# 更新系统软件包列表
 RUN apt-get update
 
-# 安装 OpenJDK 7 JRE
-RUN apt-get install -y openjdk-7-jre
+# 安装必要的依赖包
+RUN apt-get install -y \
+    apt-transport-https \
+    ca-certificates \
+    curl \
+    software-properties-common
+
+# 添加 Docker 的官方 GPG 密钥
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+
+# 添加 Docker 软件源
+RUN add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+   $(lsb_release -cs) \
+   stable"
+# 再次更新软件包列表
+RUN apt-get update
+# 安装 Docker CE
+RUN apt-get install -y docker-ce docker-ce-cli containerd.io
+
+# 安装 OpenJDK 7
+RUN apt-get install -y openjdk-7-jdk
+# 设置环境变量
+ENV JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64
+ENV PATH=$PATH:$JAVA_HOME/bin
 
 # 验证 Java 安装
 RUN java -version
@@ -41,17 +54,8 @@ RUN apt-get update && \
         sudo \
         gnupg \
         lsb-release && \
-    # 添加 Docker 的官方 GPG 密钥
-    mkdir -p /etc/apt/keyrings && \
-    curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg && \
-    # 设置 Docker 仓库
-    echo \
-      "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
-      $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
     # 更新包列表
     apt-get update && \
-    # 安装 Docker 相关包
-    apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin && \
     # 清理 apt 缓存
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
