--- a/deploy/jenkins-agent/Dockerfile_java7
+++ b/deploy/jenkins-agent/Dockerfile_java7
@@ -4,9 +4,9 @@ FROM ubuntu:22.04
 COPY deploy/linux/sources-ubuntu.list /etc/apt/sources.list
 # 设置环境变量，避免交互提示
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get install -y wget
-RUN wget http://archive.ubuntu.com/ubuntu/pool/main/c/ca-certificates/ca-certificates_20240203~22.04.1_all.deb
-RUN dpkg -i ./ca-certificates_20240203~22.04.1_all.deb
+
+COPY deploy/linux/ca-certificates_20240203~22.04.1_all.deb /tmp/ca-certificates_20240203~22.04.1_all.deb
+RUN dpkg -i /tmp/ca-certificates_20240203~22.04.1_all.deb
 
 # 更新系统软件包列表
 RUN apt-get update
