--- a/deploy/jenkins-agent/Dockerfile_java8
+++ b/deploy/jenkins-agent/Dockerfile_java8
@@ -33,6 +33,9 @@ RUN mkdir -p /etc/apt/keyrings && \
 RUN apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin
 RUN docker --version
 
+# 启动 Docker 服务
+RUN service docker start
+
 # 安装 scout-cli
 RUN curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh \
     && sh install-scout.sh
@@ -55,13 +58,29 @@ RUN curl -fsSL https://services.gradle.org/distributions/gradle-${GRADLE_VERSION
     && rm gradle-bin.zip
 RUN gradle --version
 
-# 下载并解压 Ant
+# 下载并解压 Ant 1.10.13
 ENV ANT_VERSION 1.10.13
 ENV ANT_HOME /usr/local/ant
 RUN curl -fsSL https://archive.apache.org/dist/ant/binaries/apache-ant-${ANT_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
     && mv /usr/local/apache-ant-${ANT_VERSION} $ANT_HOME \
     && ln -s $ANT_HOME/bin/ant /usr/bin/ant
 RUN ant -version
+
+# 下载并解压 Ant 1.8.2
+ENV ANT_VERSION 1.8.2
+ENV ANT_HOME /usr/local/ant-${ANT_VERSION}
+RUN curl -fsSL https://archive.apache.org/dist/ant/binaries/apache-ant-${ANT_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
+    && mv /usr/local/apache-ant-${ANT_VERSION} $ANT_HOME \
+    && ln -s $ANT_HOME/bin/ant /usr/bin/ant182
+RUN ant182 -version
+
+# 下载并解压 Ant 1.9.6
+ENV ANT_VERSION 1.9.6
+ENV ANT_HOME /usr/local/ant-${ANT_VERSION}
+RUN curl -fsSL https://archive.apache.org/dist/ant/binaries/apache-ant-${ANT_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
+    && mv /usr/local/apache-ant-${ANT_VERSION} $ANT_HOME \
+    && ln -s $ANT_HOME/bin/ant /usr/bin/ant196
+RUN ant196 -version
 
 # 安装 kubectl
 RUN mkdir -p -m 755 /etc/apt/keyrings \
