--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        java: [ '21' ]
+        java: [ '6', '7', '8', '21' ]
 
     steps:
       - uses: actions/checkout@v4
