--- a/devops-tool-api/pom.xml
+++ b/devops-tool-api/pom.xml
@@ -56,6 +56,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
