--- a/.github/workflows/code-server.yml
+++ b/.github/workflows/code-server.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - 'deploy/dockerfile/**'
-      - '.github/**'
+      - '.github/workflows/code-server.yml'
 
 jobs:
   build-and-push:
