--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,6 +3,9 @@ name: "CodeQL"
 on:
   push:
     branches: [ "master" ]
+    paths-ignore:
+      - 'deploy/**'
+      - '.github/**'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "master" ]
