--- a/.github/workflows/jenkins-agent.yml
+++ b/.github/workflows/jenkins-agent.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - 'deploy/jenkins-agent/**'
-      - '.github/**'
+      - '.github/workflows/jenkins-agent.yml'
 
 jobs:
   build-and-push:
