--- a/deploy/opensumi/Dockerfile
+++ b/deploy/opensumi/Dockerfile
@@ -12,12 +12,15 @@ RUN apk add --no-cache \
     python3 \
     make \
     g++
+# 使用npm安装Yarn
+RUN npm install -g yarn
 
 # 克隆OpenSumi仓库（可替换为特定版本或自己的fork）
 RUN git clone https://github.com/opensumi/core.git .
 
 # 安装依赖并构建OpenSumi
-RUN yarn install && \
+RUN yarn config set registry https://registry.npmmirror.com && \
+    yarn install && \
     yarn run init && \
     yarn run download-extension
 
