--- a/.github/workflows/opensumi.yml
+++ b/.github/workflows/opensumi.yml
@@ -1,4 +1,4 @@
-name: opensumi
+name: CI
 
 on:
   push:
@@ -7,29 +7,26 @@ on:
       - '.github//workflows/opensumi.yml'
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  unittest:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        arch: [ amd64 ]
+        os: [ubuntu-latest]
+        node-version: [18.x]
+        ci-project: [node, jsdom]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.2.2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.10.0
-
-      - name: Login to Alibaba Cloud Container Registry
-        uses: docker/login-action@v3.4.0
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.ALIYUN_REGISTRY_USERNAME }}
-          password: ${{ secrets.ALIYUN_REGISTRY_PASSWORD }}
+          node-version: ${{ matrix.node-version }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          file: deploy/opensumi/Dockerfile
-          push: true
-          tags: registry.cn-hangzhou.aliyuncs.com/dkyy/opensumi:lts-alpine
-          platforms: ${{ matrix.arch }}
+      - name: Install
+        run: |
+          yarn install --immutable
+          yarn constraints
+
+      - name: CI
+        run: |
+          yarn run ci --selectProjects ${{ matrix.ci-project }}
