--- a/.github/workflows/opensumi.yml
+++ b/.github/workflows/opensumi.yml
@@ -16,7 +16,9 @@ jobs:
         ci-project: [node, jsdom]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: checkout
+        run: |
+          git clone https://github.com/opensumi/core.git
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
