--- a/deploy/opensumi/Dockerfile
+++ b/deploy/opensumi/Dockerfile
@@ -1,46 +1,47 @@
 # 基于 node:18 镜像
-FROM node:18-bullseye-slim
-
-USER root
+FROM node:18 as builder
+# 用户工作空间，用于打包到前端工作空间地址
+ENV WORKSPACE_DIR workspace
+ENV EXTENSION_DIR extensions
 # 创建工作目录
 WORKDIR /app
-# 设置环境变量，避免交互提示
-ENV DEBIAN_FRONTEND=noninteractive
 
 RUN echo "当前基础镜像的操作系统信息：" && cat /etc/os-release
 
-# 更新包列表并安装必要的依赖
-RUN apt-get update && \
-    apt-get install -y \
-        git \
-        jq \
-        ca-certificates \
-        curl \
-        wget \
-        unzip \
-        tar \
-        gnupg \
-        sudo \
-        lsb-release && \
-    # 更新包列表
-    apt-get update && \
-    # 清理 apt 缓存
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
 RUN node -v
 RUN git clone https://github.com/opensumi/core.git .
-RUN ls -lah
-RUN yarn --version
-# 安装依赖并构建OpenSumi
-RUN yarn config set npmRegistryServer https://registry.npmmirror.com && \
-    yarn install && \
-    yarn run init && \
-    yarn run download-extension
+ENV ELECTRON_MIRROR https://npmmirror.com/mirrors/electron/
 
-# 暴露OpenSumi默认端口
-EXPOSE 8080
-# 恢复默认环境变量
-ENV DEBIAN_FRONTEND=dialog
-# 设置启动命令
-CMD ["yarn", "run", "start"]
+RUN mkdir -p ${WORKSPACE_DIR}  &&\
+    mkdir -p ${EXTENSION_DIR} \
+RUN yarn --ignore-scripts --network-timeout 1000000 && \
+    yarn run build && \
+    yarn run download:extensions && \
+    rm -rf ./node_modules
+
+
+FROM node:18 as app
+
+ENV WORKSPACE_DIR /workspace
+ENV EXTENSION_DIR /root/.sumi/extensions
+ENV EXT_MODE js
+ENV NODE_ENV production
+
+RUN mkdir -p ${WORKSPACE_DIR}  &&\
+    mkdir -p ${EXTENSION_DIR}
+
+WORKDIR /release
+
+COPY /app/configs/docker/productionDependencies.json package.json
+
+RUN yarn config set -H npmRegistryServer "https://registry.npmmirror.com" && \
+    yarn --network-timeout 1000000
+
+COPY --from=builder /app/dist dist
+COPY --from=builder /app/dist-node dist-node
+COPY --from=builder /app/hosted hosted
+COPY --from=builder /app/extensions /root/.sumi/extensions
+
+EXPOSE 8000
+
+CMD [ "node", "./dist-node/server/index.js" ]
