--- a/.github/workflows/opensumi.yml
+++ b/.github/workflows/opensumi.yml
@@ -13,8 +13,8 @@ jobs:
       matrix:
         arch: [ amd64 ]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.2.2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3.10.0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.10.0
