--- a/.github/workflows/code-server.yml
+++ b/.github/workflows/code-server.yml
@@ -2,6 +2,7 @@ name: code-server
 
 on:
   push:
+    branches: [ "master","dev" ]
     paths:
       - 'deploy/dockerfile/**'
       - '.github/workflows/code-server.yml'
