--- a/.github/workflows/opensumi.yml
+++ b/.github/workflows/opensumi.yml
@@ -2,6 +2,7 @@ name: opensumi
 
 on:
   push:
+    branches: [ "master","dev" ]
     paths:
       - 'deploy/opensumi/**'
       - '.github/workflows/opensumi.yml'
