--- a/base/src/main/resources/application.yml
+++ b/base/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     name: devops-base
   profiles:
     active: dev
+  mvc:
+    converters:
+      preferred-json-mapper: jackson
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
@@ -18,11 +21,3 @@ spring:
       max-lifetime: 1800000
       connection-timeout: 30000
       connection-test-query: SELECT 1
-  security:
-    oauth2:
-      client:
-        registration:
-          github:
-            client-id:
-            client-secret:
-            scope: read:user,user:email
