--- a/devops-common/hfwas-common-core/pom.xml
+++ b/devops-common/hfwas-common-core/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>devops-common-core</artifactId>
+    <artifactId>hfwas-common-core</artifactId>
     <packaging>jar</packaging>
 
     <name>devops-common-core</name>
@@ -55,6 +55,10 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 </project>
