update module name

--- a/base/pom.xml
+++ b/base/pom.xml
@@ -126,7 +126,7 @@
 
         <dependency>
             <groupId>com.hfwas.devops</groupId>
-            <artifactId>devops-common-core</artifactId>
+            <artifactId>hfwas-common-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hfwas.devops</groupId>
