--- a/devops-common/pom.xml
+++ b/devops-common/pom.xml
@@ -12,7 +12,7 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>devops-common-core</module>
+        <module>hfwas-common-core</module>
         <module>devops-common-entity</module>
         <module>devops-common-service</module>
         <module>devops-common-starter-mybatis</module>
