--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -341,7 +341,7 @@
             </dependency>
             <dependency>
                 <groupId>com.hfwas.devops</groupId>
-                <artifactId>devops-common-core</artifactId>
+                <artifactId>hfwas-common-core</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
