--- a/.github/workflows/jenkins-agent.yml
+++ b/.github/workflows/jenkins-agent.yml
@@ -2,7 +2,7 @@ name: jenkins-agent
 
 on:
   push:
-    branches: [ "master","dev" ]
+    branches: [ "master" ]
     paths:
       - 'deploy/jenkins-agent/**'
       - '.github/workflows/jenkins-agent.yml'
